--- a/Game/styes/index.css
+++ b/Game/styes/index.css
@@ -7,4 +7,131 @@ body{
     left: 0;
     top: 0;
     color: white;
+    background-color: black;
+    border: 1px solid white;
+    padding: 0.5rem;
+
 }
+
+#score-row,
+#distance-row{
+    display: flex;
+}
+
+#score,
+#distance{
+    margin-left: 0.5rem;
+}
+
+.divider{
+    height: 2px;
+    width: 100%;
+    background-color: white;
+    margin: 0.5rem 0;
+}
+
+#info #title{
+    font-weight: bold;
+}
+
+#info #health::-moz-range-track{
+    width: 100%;
+    height: 12px;
+    background: #333333;
+}
+
+#info #health::-moz-range-thumb{
+    opacity: 0;
+}
+
+#info #health::-moz-range-progress{
+    height: 12px;
+    background: #4194e2;
+}
+
+/*Muestra la vida, si es que la utilizó al final*/
+#info #health::-webkit-slider-runnable-track{
+    width: 100%;
+    height: 12px;
+    background: #333333;
+    overflow: hidden;
+}
+
+#info #health::-webkit-slider-runnable-track{
+    height: 12px;
+    -webkit-appearance: none;
+    background: #333333;
+    margin-top: -1px;
+}
+
+#info #health::-webkit-slider-thumb{
+    width: 0;
+    -webkit-appearance: none;
+    height: 12px;
+    cursor: ew-resize;
+    background: transparent;
+    box-shadow: -100px 0 0 100px #4194e2;
+}
+
+
+
+
+#intro-panel,
+#game-over-panel{
+    display: grid;
+    place-items: center;
+    position: absolute;
+    top:0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: black;
+    color: white;
+    z-index: 10;
+}
+
+#game-over-panel{
+    display: none;
+}
+
+
+#intro-column,
+#game-over-column{
+    text-align: center;
+}
+
+#intro-title
+#game-over-title{
+    font-size: 3rem;
+    margin-bottom: 3rem;
+}
+
+
+#start-button,
+#replay-button{
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+    padding: 0.5rem;
+    cursor: pointer;
+}
+
+#start-button:hover,
+#replay-button:hover{
+    background-color: #0f0f5c;
+}
+
+#game-over-score-row,
+#game-over-distance-row{
+    display: flex;
+    margin-bottom: 1rem;
+    font-size: 1.3rem;
+}
+
+#game-over-score,
+#game-over-distance{
+    margin-left: 0.5rem;
+}
+
+
+
